added code to test cell detector

--- a/_run.ipynb
+++ b/_run.ipynb
@@ -9,7 +9,8 @@
     "| RetinaNet  | **75.25**   |   56.47      |   81.87    | **75.87**  |   54.33     |   65.71     |   65.86   | **19.17** |   29.56     |\n",
     "| R3Det      |   74.97     |   63.21      | **83.93**  |   73.61    |   66.66     |   64.76     | **69.09** |   17.91   | **30.89**   |\n",
     "| DCL        |   71.81     | **63.35**    |   77.89    |   72.71    | **66.98**   | **67.62**   |   67.58   |   17.74   |   28.48     |\n",
-    "| CSL        |   72.42     |   53.98      |   75.37    |   73.50    |   51.93     |   63.81     |   63.20   |   18.59   |   27.00     |"
+    "| CSL        |   72.42     |   53.98      |   75.37    |   73.50    |   51.93     |   63.81     |   63.20   |   18.59   |   27.00     |\n",
+    "| Ours       |   59.41     |   35.58      |   68.02    |   67.64    |   52.50     |   40.00     |   47.50   |    5.31   |   16.37     |"
    ]
   },
   {
@@ -114,12 +115,12 @@
    "source": [
     "%cd /workdir/msc/RotationDetection/dataloader/dataset/  \n",
     "!python convert_data_to_tfrecord.py --VOC_dir='/workdir/datasets/msc/UFRGS_CELL_2classes/crop' \\\n",
-    "                                   --xml_dir='labeltxt' \\\n",
-    "                                   --image_dir='images' \\\n",
-    "                                   --save_name='train'  \\\n",
-    "                                   --img_format='.png'  \\\n",
-    "                                   --save_dir='/workdir/datasets/msc/' \\\n",
-    "                                   --dataset='UFRGS_CELL' \\"
+    "                                    --xml_dir='labeltxt' \\\n",
+    "                                    --image_dir='images' \\\n",
+    "                                    --save_name='train'  \\\n",
+    "                                    --img_format='.png'  \\\n",
+    "                                    --save_dir='/workdir/datasets/msc/' \\\n",
+    "                                    --dataset='UFRGS_CELL' \\"
    ]
   },
   {
@@ -9188,13 +9189,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
-   "metadata": {
-    "collapsed": true,
-    "jupyter": {
-     "outputs_hidden": true
-    }
-   },
+   "execution_count": 2,
+   "metadata": {},
    "outputs": [
     {
      "name": "stdout",
@@ -9214,7 +9210,7 @@
       "Restored model\n",
       "/workdir/msc/RotationDetection/output/trained_weights/DLCv3_UFRGS_CELL_smooth_l1_loss/UFRGS_CELL_199999model.ckpt\n",
       "**********\n",
-      "Eval image exp_M3_Mauricio_mcf7_frame_17: 100%|█| 30/30 [00:18<00:00,  1.66it/s]\n",
+      "Eval image exp_M3_Mauricio_mcf7_frame_17: 100%|█| 30/30 [00:15<00:00,  1.99it/s]\n",
       "********************\n",
       "rotation eval:\n",
       "Writing normal_cell VOC resutls file\n",
@@ -9238,68 +9234,19 @@
       "Threshold:  0.6000000000000001\n",
       "cls : normal_cell|| Recall: 0.6662908673435278 || Precison: 0.3231273920174959|| AP: 0.5383649366199919\n",
       "F1:0.6379461109174169 P:0.6594464500601684 R:0.6178128516146416\n",
-      "cls : mitoses|| Recall: 0.7333333263492064 || Precison: 0.14951456310679612|| AP: 0.5689151751382387\n",
-      "F1:0.6255874142489847 P:0.6226415094339622 R:0.6285714225850341\n",
-      "mAP is : 0.5536400558791152\n",
-      "\n",
-      "\n",
-      "Threshold:  0.6500000000000001\n",
-      "cls : normal_cell|| Recall: 0.5501691087371261 || Precison: 0.26681246582832147|| AP: 0.41950123553135693\n",
-      "F1:0.5343833455667014 P:0.5806878306878307 R:0.4949267187204885\n",
-      "cls : mitoses|| Recall: 0.5428571376870749 || Precison: 0.11067961165048544|| AP: 0.39883827734878285\n",
-      "F1:0.4928859930877119 P:0.49056603773584906 R:0.495238090521542\n",
-      "mAP is : 0.4091697564400699\n",
-      "\n",
-      "\n",
-      "Threshold:  0.7000000000000002\n",
-      "cls : normal_cell|| Recall: 0.38895152154571416 || Precison: 0.18862766539092402|| AP: 0.24887371354279927\n",
-      "F1:0.39095260774789986 P:0.47649918962722854 R:0.331454340099826\n",
-      "cls : mitoses|| Recall: 0.39047618675736967 || Precison: 0.07961165048543689|| AP: 0.2664257311316135\n",
-      "F1:0.37974237467180955 P:0.5660377358490566 R:0.2857142829931973\n",
-      "mAP is : 0.2576497223372064\n",
-      "\n",
-      "\n",
-      "Threshold:  0.7500000000000002\n",
-      "cls : normal_cell|| Recall: 0.24013528721518007 || Precison: 0.11645708037178787|| AP: 0.15910809784736984\n",
-      "F1:0.2486291038907429 P:0.31542461005199307 R:0.20518602006179704\n",
-      "cls : mitoses|| Recall: 0.2952380924263039 || Precison: 0.06019417475728155|| AP: 0.19581193999798652\n",
-      "F1:0.3108066862307372 P:0.5348837209302325 R:0.21904761696145128\n",
-      "mAP is : 0.17746001892267818\n",
-      "\n",
-      "\n",
-      "Threshold:  0.8000000000000003\n",
-      "cls : normal_cell|| Recall: 0.11048478003327533 || Precison: 0.05358119190814653|| AP: 0.10349215325887176\n",
-      "F1:0.11797283024916679 P:0.1564245810055866 R:0.09470124002852172\n",
-      "cls : mitoses|| Recall: 0.15238095092970524 || Precison: 0.031067961165048542|| AP: 0.060173160173160184\n",
-      "F1:0.1538417520982883 P:0.23529411764705882 R:0.11428571319727893\n",
-      "mAP is : 0.08183265671601597\n",
-      "\n",
-      "\n",
-      "Threshold:  0.8500000000000003\n",
-      "cls : normal_cell|| Recall: 0.03833145429725879 || Precison: 0.018589393110989613|| AP: 0.09090909090909091\n",
-      "F1:0.03931023397541498 P:0.04492753623188406 R:0.034949267153383014\n",
-      "cls : mitoses|| Recall: 0.05714285659863946 || Precison: 0.011650485436893204|| AP: 0.010909090909090908\n",
-      "F1:0.06802312903383045 P:0.11904761904761904 R:0.047619047165532884\n",
-      "mAP is : 0.05090909090909091\n",
-      "\n",
-      "\n",
-      "Threshold:  0.9000000000000004\n",
-      "cls : normal_cell|| Recall: 0.010146561431627326 || Precison: 0.004920721705850191|| AP: 0.004662004662004662\n",
-      "F1:0.01459450383386886 P:0.02601156069364162 R:0.010146561431627326\n",
-      "cls : mitoses|| Recall: 0.0 || Precison: 0.0|| AP: 0.0\n",
-      "F1:0.0 P:0.0 R:0.0\n",
-      "mAP is : 0.002331002331002331\n",
-      "\n",
-      "\n",
-      "Threshold:  0.9500000000000004\n",
-      "cls : normal_cell|| Recall: 0.0 || Precison: 0.0|| AP: 0.0\n",
-      "F1:0.0 P:0.0 R:0.0\n",
-      "cls : mitoses|| Recall: 0.0 || Precison: 0.0|| AP: 0.0\n",
-      "F1:0.0 P:0.0 R:0.0\n",
-      "mAP is : 0.0\n",
-      "\n",
-      "\n",
-      "mAP50:95 :  0.2847942814166802\n"
+      "^C\n",
+      "Traceback (most recent call last):\n",
+      "  File \"test_ufrgscell.py\", line 51, in <module>\n",
+      "    tester.eval()\n",
+      "  File \"test_ufrgscell.py\", line 45, in eval\n",
+      "    test_annotation_path=self.args.test_annotation_path)\n",
+      "  File \"../../libs/val_libs/voc_eval_r.py\", line 312, in voc_evaluate_detections\n",
+      "    ap = self.do_python_eval(test_imgid_list, test_annotation_path, ovthreshold=th)\n",
+      "  File \"../../libs/val_libs/voc_eval_r.py\", line 270, in do_python_eval\n",
+      "    ovthresh=ovthreshold)\n",
+      "  File \"../../libs/val_libs/voc_eval_r.py\", line 209, in voc_eval\n",
+      "    BBGT = R['bbox'].astype(float)\n",
+      "KeyboardInterrupt\n"
      ]
     }
    ],
@@ -9308,8 +9255,7 @@
     "!python test_ufrgscell.py --img_dir='/workdir/datasets/msc/UFRGS_CELL_2classes/test/imgs'  \\\n",
     "                          --gpu=0 \\\n",
     "                          --image_ext='.jpg' \\\n",
-    "                          --test_annotation_path='/workdir/datasets/msc/UFRGS_CELL_2classes/test/xml_rotdet' \\\n",
-    "                          --draw_imgs"
+    "                          --test_annotation_path='/workdir/datasets/msc/UFRGS_CELL_2classes/test/xml_rotdet'"
    ]
   },
   {
