fixs on run_inference script

--- a/_run.ipynb
+++ b/_run.ipynb
@@ -9190,7 +9190,12 @@
   {
    "cell_type": "code",
    "execution_count": 2,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true,
+    "jupyter": {
+     "outputs_hidden": true
+    }
+   },
    "outputs": [
     {
      "name": "stdout",
@@ -9301,6 +9306,48 @@
     "\n",
     "    plt.figure(figsize=(15,15))\n",
     "    plt.imshow(draw)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 20,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "/workdir/msc/RotationDetection\n",
+      "/workdir\n",
+      "/workdir/msc/RotationDetection/output/trained_weights/CSLv1_UFRGS_CELL_smooth_l1_loss\n",
+      "\n",
+      "\n",
+      "******************************\n",
+      " CHECKPOINT PATH: /workdir/msc/RotationDetection/output/trained_weights/CSLv1_UFRGS_CELL_smooth_l1_loss/UFRGS_CELL_199999model.ckpt\n",
+      "\n",
+      "******************************\n",
+      "model restore from : /workdir/msc/RotationDetection/output/trained_weights/CSLv1_UFRGS_CELL_smooth_l1_loss/UFRGS_CELL_199999model.ckpt\n",
+      "\n",
+      "**********\n",
+      "Restored model\n",
+      "/workdir/msc/RotationDetection/output/trained_weights/CSLv1_UFRGS_CELL_smooth_l1_loss/UFRGS_CELL_199999model.ckpt\n",
+      "**********\n",
+      "Eval image exp_M3_Mauricio_mcf7_frame_17: 100%|█| 30/30 [00:19<00:00,  1.56it/s]\n",
+      "********************\n",
+      "rotation eval:\n",
+      "Writing normal_cell VOC resutls file\n",
+      "Writing mitoses VOC resutls file\n"
+     ]
+    }
+   ],
+   "source": [
+    "%cd /workdir/msc/RotationDetection\n",
+    "!python run_inference.py \\\n",
+    "--img_dir='/workdir/datasets/msc/UFRGS_CELL_2classes/test/imgs'  \\\n",
+    "--gpu=0 \\\n",
+    "--image_ext='.jpg' \\\n",
+    "--test_annotation_path='/workdir/datasets/msc/UFRGS_CELL_2classes/test/xml_rotdet' \\\n",
+    "csl"
    ]
   },
   {
