--- a/cell_detector/train_cell.ipynb
+++ b/cell_detector/train_cell.ipynb
@@ -3,12 +3,8 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "e9c1fac8",
-   "metadata": {
-    "jupyter": {
-     "source_hidden": true
-    }
-   },
+   "id": "7283e218",
+   "metadata": {},
    "outputs": [],
    "source": [
     "%load_ext autoreload\n",
@@ -18,12 +14,8 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "05c3af88",
-   "metadata": {
-    "jupyter": {
-     "source_hidden": true
-    }
-   },
+   "id": "a3422fdc",
+   "metadata": {},
    "outputs": [],
    "source": [
     "import sys\n",
@@ -47,12 +39,8 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "3a967266",
-   "metadata": {
-    "jupyter": {
-     "source_hidden": true
-    }
-   },
+   "id": "affb2907",
+   "metadata": {},
    "outputs": [],
    "source": [
     "# import experiment model\n",
@@ -62,12 +50,8 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "a3c8e0e7",
-   "metadata": {
-    "jupyter": {
-     "source_hidden": true
-    }
-   },
+   "id": "9a75e8b0",
+   "metadata": {},
    "outputs": [],
    "source": [
     "# define callbacks\n",
@@ -79,12 +63,8 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "93b10608",
-   "metadata": {
-    "jupyter": {
-     "source_hidden": true
-    }
-   },
+   "id": "ef76e1cf",
+   "metadata": {},
    "outputs": [],
    "source": [
     "data = data_loader()\n",
@@ -100,12 +80,8 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "ac6b2f23",
-   "metadata": {
-    "jupyter": {
-     "source_hidden": true
-    }
-   },
+   "id": "8a09a50d",
+   "metadata": {},
    "outputs": [],
    "source": [
     "#model.save_weights('cell_detector_weights.h5')"
@@ -114,12 +90,8 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "777bd223",
-   "metadata": {
-    "jupyter": {
-     "source_hidden": true
-    }
-   },
+   "id": "fdb9fe03",
+   "metadata": {},
    "outputs": [],
    "source": [
     "for sample in data.take(11):\n",
@@ -131,12 +103,8 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "f5f384bd",
-   "metadata": {
-    "jupyter": {
-     "source_hidden": true
-    }
-   },
+   "id": "1ae51b04",
+   "metadata": {},
    "outputs": [],
    "source": [
     "classes, regress = model.predict(sample[0])\n",
@@ -147,12 +115,8 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "5ea14c2f",
-   "metadata": {
-    "jupyter": {
-     "source_hidden": true
-    }
-   },
+   "id": "6611fe13",
+   "metadata": {},
    "outputs": [],
    "source": [
     "plt.figure(figsize=(10,10))\n",
@@ -172,12 +136,8 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "17bd19eb",
-   "metadata": {
-    "jupyter": {
-     "source_hidden": true
-    }
-   },
+   "id": "3fa5cfa3",
+   "metadata": {},
    "outputs": [],
    "source": [
     "view_data(img, true_classes.numpy(), true_regress.numpy())"
@@ -186,12 +146,8 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "df8b10ba",
-   "metadata": {
-    "jupyter": {
-     "source_hidden": true
-    }
-   },
+   "id": "e5a35019",
+   "metadata": {},
    "outputs": [],
    "source": [
     "view_data(img, pred_classes, pred_regress)"
@@ -200,12 +156,8 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "6d237fc1",
-   "metadata": {
-    "jupyter": {
-     "source_hidden": true
-    }
-   },
+   "id": "e90d5ae6",
+   "metadata": {},
    "outputs": [],
    "source": [
     "from glob import glob\n",
@@ -216,12 +168,8 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "b2cc14a3",
-   "metadata": {
-    "jupyter": {
-     "source_hidden": true
-    }
-   },
+   "id": "a2203ad9",
+   "metadata": {},
    "outputs": [],
    "source": [
     "def resize2ratio(img):\n",
@@ -236,12 +184,8 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "1513ff2b",
-   "metadata": {
-    "jupyter": {
-     "source_hidden": true
-    }
-   },
+   "id": "ea5233f5",
+   "metadata": {},
    "outputs": [],
    "source": [
     "path_img = np.random.choice(test_imgs)\n",
@@ -252,12 +196,8 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "312e7ed2",
-   "metadata": {
-    "jupyter": {
-     "source_hidden": true
-    }
-   },
+   "id": "03a1859a",
+   "metadata": {},
    "outputs": [],
    "source": [
     "img_batch = np.float32((img-cfgs.PIXEL_MEAN)/cfgs.PIXEL_STD)[np.newaxis,...]\n",
@@ -270,12 +210,8 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "e24dca2b",
-   "metadata": {
-    "jupyter": {
-     "source_hidden": true
-    }
-   },
+   "id": "9ab0a5f1",
+   "metadata": {},
    "outputs": [],
    "source": [
     "view_data(img, pred_classes, pred_regress)"
@@ -284,8 +220,13 @@
   {
    "cell_type": "code",
    "execution_count": 3,
-   "id": "9785eaf1",
-   "metadata": {},
+   "id": "41e8fe95",
+   "metadata": {
+    "collapsed": true,
+    "jupyter": {
+     "outputs_hidden": true
+    }
+   },
    "outputs": [
     {
      "name": "stdout",
@@ -389,7 +330,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "57c93c08",
+   "id": "b6db944e",
    "metadata": {},
    "source": [
     "| Model      | AP50 normal | AP50 mitoses | P50 normal | R50 normal | P50 mitoses | R50 mitoses |   AP50    |   AP75    |   AP50:95   |\n",
@@ -405,7 +346,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "bda71264",
+   "id": "08982747",
    "metadata": {},
    "outputs": [],
    "source": []
